increased PermGen for pitest
strange, it runs fine correctly locally ...